# sdk

./: .gitignore  AGENTS.md  Cargo.toml  README  ext_build.toml  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.base.json
.cargo/: config.toml
contracts/: coverage.toml
contracts/exports/: go.toml  kotlin.toml  py.toml  swift.toml  ts.toml
contracts/provenance/typescript/: event.json  event_index.json  events.json  events_indexed.json  replica_schema.json  types.json
crates/binding_model/: Cargo.toml
crates/binding_model/src/: lib.rs
crates/core_bindings/: Cargo.toml
crates/core_bindings/src/: lib.rs
crates/event_bindings/: Cargo.toml
crates/event_bindings/src/: lib.rs  model.rs
crates/event_codec_wasm/: Cargo.toml  README
crates/event_codec_wasm/src/: lib.rs
crates/event_index_bindings/: Cargo.toml
crates/event_index_bindings/src/: lib.rs
crates/events_bindings/: Cargo.toml
crates/events_bindings/src/: lib.rs  model.rs
crates/events_bindings/src/typescript/: constants.ts  types.ts
crates/events_codec_wasm/: Cargo.toml  README
crates/events_codec_wasm/src/: lib.rs
crates/events_indexed_bindings/: Cargo.toml
crates/events_indexed_bindings/src/: lib.rs
crates/identity_bindings/: Cargo.toml
crates/identity_bindings/src/: lib.rs
crates/identity_bindings/src/typescript/: constants.ts
crates/replica_db_schema_bindings/: Cargo.toml
crates/replica_db_schema_bindings/src/: lib.rs  model.rs
crates/replica_db_schema_bindings/src/typescript/: types.ts
crates/replica_db_wasm/: Cargo.toml  README
crates/replica_db_wasm/src/: lib.rs  snapshot.rs  utils.rs  wasm_impl.rs
crates/replica_schema_bindings/: Cargo.toml
crates/replica_schema_bindings/src/: lib.rs
crates/replica_store_wasm/: Cargo.toml  README
crates/replica_store_wasm/src/: lib.rs  snapshot.rs  wasm_impl.rs
crates/replica_sync_wasm/: Cargo.toml  README
crates/replica_sync_wasm/src/: lib.rs
crates/runtime_contract_v1/: Cargo.toml  README
crates/runtime_contract_v1/src/: lib.rs
crates/sdk/: Cargo.toml  README
crates/sdk/examples/: runtime_local.rs  sdk_v1_knowledge_prepare.rs  sdk_v1_listing_prepare.rs  sdk_v1_local_enqueue_and_mock_sync.rs  sdk_v1_myc_nip46_signer_setup.rs
crates/sdk/src/: actor_json.rs  client.rs  config.rs  dvm_runtime.rs  error.rs  farm.rs  farms_runtime.rs  geonames.rs  idempotency.rs  identity.rs  knowledge.rs  lib.rs  listing.rs  listings_runtime.rs  market_runtime.rs  order.rs  orders_runtime.rs  privacy.rs  private_store.rs  product_clients.rs  profile.rs  protocol.rs  receipt.rs  relay_targets.rs  runtime.rs  runtime_targets.rs  signer_provider.rs  studio_store.rs  sync_runtime.rs  trade_runtime.rs  trade_storage.rs  transport.rs  workflow_runtime.rs
crates/sdk/src/adapters/: mod.rs  nostr.rs  radrootsd.rs  relay.rs  signer.rs  signing.rs
crates/sdk/src/protocol/: events.rs  farm.rs  identity.rs  listing.rs  mod.rs  order.rs  profile.rs  wire.rs
crates/sdk/tests/: client.rs  config.rs  dvm_runtime.rs  facade.rs  farms_runtime.rs  geonames.rs  identity_public_api.rs  knowledge_public_api.rs  listings_runtime.rs  market_runtime.rs  orders_runtime.rs  radrootsd.rs  relay_direct.rs  replica_ingest.rs  runtime_contract_public_api.rs  runtime_foundation.rs  source_boundary.rs  sync_runtime.rs  trade_product_publish_runtime.rs  trade_public_api.rs
crates/sdk/tests/support/: fixture_signer.rs  serializer_failure.rs
crates/sdk/tests/unit/: actor_json_tests.rs  adapters_nostr_tests.rs  adapters_radrootsd_tests.rs  adapters_signing_tests.rs  dvm_runtime_tests.rs  error_tests.rs  farms_runtime_tests.rs  idempotency_tests.rs  identity_tests.rs  listings_runtime_tests.rs  market_runtime_tests.rs  orders_runtime_tests.rs  private_store_tests.rs  relay_targets_tests.rs  runtime_tests.rs  signer_provider_tests.rs  sync_runtime_tests.rs  trade_runtime_tests.rs  transport_tests.rs  workflow_runtime_tests.rs
crates/sql_wasm_runtime/: Cargo.toml
crates/sql_wasm_runtime/src/: lib.rs
crates/trade_bindings/: Cargo.toml
crates/trade_bindings/src/: dto.rs  lib.rs  model.rs
crates/types_bindings/: Cargo.toml
crates/types_bindings/src/: lib.rs
crates/types_bindings/src/typescript/: types.ts
crates/xtask/: Cargo.toml
crates/xtask/src/: check.rs  contracts.rs  fs.rs  generate.rs  main.rs  manifest.rs  output.rs  package_matrix.rs  ts.rs  wasm.rs
testdata/baseline/current-radroots-generated/core/: types.ts
testdata/baseline/current-radroots-generated/events/: kinds.ts
testdata/baseline/current-radroots-generated/trade/: types.ts
tests/import-smoke/: package.json
tests/import-smoke/src/: index.ts
tools/xtask/: Cargo.toml
tools/xtask/src/: check.rs  cli_host.rs  contracts.rs  coverage.rs  coverage_policy.rs  coverage_policy_tests.rs  dto_render.rs  dto_roots.rs  fs.rs  generate.rs  main.rs  manifest.rs  output.rs  package_matrix.rs  package_metadata.rs  smoke.rs  wasm.rs  wasm_declarations.rs
