[workspace]
members = [
  "crates/core_bindings",
  "crates/events_codec_wasm",
  "crates/events_bindings",
  "crates/events_indexed_bindings",
  "crates/identity_bindings",
  "crates/replica_db_wasm",
  "crates/replica_db_schema_bindings",
  "crates/replica_sync_wasm",
  "crates/sdk",
  "crates/sql_wasm_runtime",
  "crates/trade_bindings",
  "crates/types_bindings",
  "tools/xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/radrootslabs/sdk"
homepage = "https://radroots.org"
readme = "README"

[workspace.dependencies]
dto_bindgen = { git = "https://github.com/triesap/dto_bindgen", rev = "e1ec30465ffdb0964908d12f36f7a49f642321db" }
dto_bindgen_core = { git = "https://github.com/triesap/dto_bindgen", rev = "e1ec30465ffdb0964908d12f36f7a49f642321db", package = "dto_bindgen_core" }
radroots_core = { path = "../lib/crates/core", version = "0.1.0-alpha.2", default-features = false }
radroots_authority = { path = "../lib/crates/authority", version = "0.1.0-alpha.2", default-features = false }
radroots_event_store = { path = "../lib/crates/event_store", version = "0.1.0-alpha.2", default-features = false }
radroots_events = { path = "../lib/crates/events", version = "0.1.0-alpha.2", default-features = false }
radroots_events_codec = { path = "../lib/crates/events_codec", version = "0.1.0-alpha.2", default-features = false }
radroots_events_indexed = { path = "../lib/crates/events_indexed", version = "0.1.0-alpha.2", default-features = false }
radroots_geocoder = { path = "../lib/crates/geocoder", version = "0.1.0-alpha.2" }
radroots_identity = { path = "../lib/crates/identity", version = "0.1.0-alpha.2", default-features = false, features = [
  "std",
] }
radroots_nostr = { path = "../lib/crates/nostr", version = "0.1.0-alpha.2", default-features = false }
radroots_nostr_connect = { path = "../lib/crates/nostr_connect", version = "0.1.0-alpha.2", default-features = false }
radroots_nostr_signer = { path = "../lib/crates/nostr_signer", version = "0.1.0-alpha.2", default-features = false }
radroots_outbox = { path = "../lib/crates/outbox", version = "0.1.0-alpha.2", default-features = false }
radroots_publish_proxy_protocol = { path = "../lib/crates/publish_proxy_protocol", version = "0.1.0-alpha.2", default-features = false }
radroots_relay_transport = { path = "../lib/crates/relay_transport", version = "0.1.0-alpha.2", default-features = false }
radroots_replica_db = { path = "../lib/crates/replica_db", version = "0.1.0-alpha.2", default-features = false }
radroots_replica_db_schema = { path = "../lib/crates/replica_db_schema", version = "0.1.0-alpha.2", default-features = false }
radroots_replica_sync = { path = "../lib/crates/replica_sync", version = "0.1.0-alpha.2", default-features = false }
radroots_runtime_paths = { path = "../lib/crates/runtime_paths", version = "0.1.0-alpha.2", default-features = false }
radroots_sdk_sql_wasm_runtime = { path = "crates/sql_wasm_runtime", version = "0.1.0-alpha.2" }
radroots_sp1_guest_trade = { path = "../lib/crates/sp1_guest_trade", version = "0.1.0-alpha.2", default-features = false }
radroots_sql_core = { path = "../lib/crates/sql_core", version = "0.1.0-alpha.2", default-features = false }
radroots_trade = { path = "../lib/crates/trade", version = "0.1.0-alpha.2", default-features = false, features = [
  "serde_json",
  "std",
] }
radroots_types = { path = "../lib/crates/types", version = "0.1.0-alpha.2", default-features = false }

base64 = { version = "0.22", default-features = false, features = ["alloc"] }
futures = { version = "0.3" }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
js-sys = { version = "0.3" }
nostr = { version = "0.44.2" }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1", default-features = false, features = [
  "derive",
  "alloc",
] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde-wasm-bindgen = { version = "0.6" }
sha2 = { version = "0.10", default-features = false }
sqlx = { version = "0.8.6", default-features = false }
tempfile = { version = "3" }
tokio = { version = "1" }
tokio-tungstenite = "0.26.2"
uuid = { version = "1.22.0", features = ["v4", "v7"] }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-test = { version = "0.3" }
