[package]
name = "radroots_core_bindings"
description = "Generated bindings for Radroots core primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
radroots_core = { workspace = true }
