[package]
name = "radroots_events_indexed_bindings"
description = "Generated bindings for indexed Radroots events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
radroots_event_index = { workspace = true }
