[package]
name = "radroots_identity_bindings"
description = "Generated bindings for Radroots identity contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
dto_bindgen_backend_ts = { workspace = true }
radroots_identity = { workspace = true }
