[package]
name = "radroots_replica_db_wasm"
publish = false
version = "0.1.0-alpha.2"
edition.workspace = true
authors = ["Tyson Lupul <tyson@radroots.org>"]
rust-version.workspace = true
license.workspace = true
description = "WASM boundary for Radroots replica database access"
repository.workspace = true
homepage.workspace = true
readme = "README"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
radroots_sql_core = { workspace = true, features = ["bridge"] }
radroots_sql_wasm_core = { workspace = true, default-features = false, features = [
  "bridge",
] }
radroots_replica_db = { workspace = true }
radroots_replica_db_schema = { workspace = true }
radroots_replica_sync = { workspace = true, features = ["std"] }
js-sys = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
