[package]
name = "radroots_replica_schema_bindings"
description = "Generated bindings for Radroots replica schemas"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
dto_bindgen_core = { workspace = true }
radroots_replica_schema = { workspace = true, features = ["dto-bindgen"] }
