[package]
name = "radroots_replica_sync_wasm"
publish = false
version = "0.1.0-alpha.2"
edition.workspace = true
authors = ["Tyson Lupul <tyson@radroots.org>"]
rust-version.workspace = true
license.workspace = true
description = "WASM boundary for Radroots replica synchronization"
repository.workspace = true
homepage.workspace = true
readme = "README"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = { workspace = true }
radroots_event = { workspace = true, default-features = false, features = [
  "serde",
] }
radroots_sdk_sql_wasm_runtime = { workspace = true }
radroots_replica_sync = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
uuid = { workspace = true, features = ["js"] }
wasm-bindgen = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
