[package]
name = "radroots_sdk"
publish = ["crates-io"]
version.workspace = true
edition.workspace = true
authors = ["Tyson Lupul <tyson@radroots.org>"]
rust-version.workspace = true
license.workspace = true
description = "Public Rust SDK for Radroots"
repository.workspace = true
homepage.workspace = true
readme = "README"

[features]
default = ["std", "serde", "serde_json", "identity-models"]
std = ["radroots_events/std", "radroots_events_codec/std", "radroots_trade/std"]
serde = ["dep:serde", "radroots_events/serde", "radroots_trade/serde"]
serde_json = [
  "dep:serde_json",
  "serde",
  "nostr",
  "radroots_events_codec/serde_json",
  "radroots_trade/serde_json",
]
nostr = ["radroots_events_codec/nostr"]
identity-models = [
  "dep:radroots_identity",
  "radroots_identity/profile",
  "radroots_identity/std",
]
identity-storage = ["identity-models", "std", "radroots_identity/std"]
signing = ["dep:radroots_nostr", "nostr"]
relay-client = ["signing", "std", "serde_json", "radroots_nostr/client"]
radrootsd-client = ["std", "serde_json", "dep:reqwest"]
signer-adapters = [
  "identity-models",
  "signing",
  "std",
  "dep:radroots_nostr_connect",
  "dep:radroots_nostr_signer",
]
runtime = [
  "std",
  "serde_json",
  "dep:hex",
  "dep:radroots_authority",
  "dep:radroots_event_store",
  "dep:radroots_outbox",
  "dep:radroots_relay_transport",
  "dep:sha2",
  "dep:sqlx",
  "dep:uuid",
  "radroots_authority/std",
  "radroots_event_store/sqlite",
  "radroots_event_store/runtime-tokio",
  "radroots_outbox/sqlite",
  "radroots_outbox/runtime-tokio",
  "radroots_relay_transport/std",
  "radroots_relay_transport/storage",
  "radroots_relay_transport/runtime-tokio",
  "radroots_trade/event_store",
]
local-signer = ["runtime", "radroots_authority/local_signer"]
relay-runtime = [
  "runtime",
  "dep:radroots_nostr",
  "radroots_nostr/client",
  "radroots_relay_transport/client",
]
cli-runtime = [
  "std",
  "serde",
  "serde_json",
  "runtime",
  "local-signer",
  "relay-runtime",
  "signing",
  "relay-client",
]

[dependencies]
radroots_authority = { workspace = true, optional = true, default-features = false }
radroots_event_store = { workspace = true, optional = true, default-features = false }
radroots_events = { workspace = true, default-features = false }
radroots_events_codec = { workspace = true, default-features = false }
radroots_outbox = { workspace = true, optional = true, default-features = false }
radroots_relay_transport = { workspace = true, optional = true, default-features = false }
radroots_trade = { workspace = true, default-features = false }
radroots_identity = { workspace = true, optional = true, default-features = false }
radroots_nostr = { workspace = true, optional = true, default-features = false }
radroots_nostr_connect = { workspace = true, optional = true }
radroots_nostr_signer = { workspace = true, optional = true, default-features = false }
reqwest = { workspace = true, optional = true, default-features = false, features = [
  "json",
  "rustls-tls",
] }
hex = { workspace = true, optional = true }
serde = { workspace = true, optional = true, default-features = false, features = [
  "derive",
  "alloc",
] }
serde_json = { workspace = true, optional = true, default-features = false, features = [
  "alloc",
] }
sha2 = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true, default-features = false, features = [
  "runtime-tokio",
  "sqlite",
] }
uuid = { workspace = true, optional = true }

[[example]]
name = "sdk_v1_listing_prepare"
path = "examples/sdk_v1_listing_prepare.rs"
required-features = ["runtime"]

[[example]]
name = "sdk_v1_local_enqueue_and_mock_sync"
path = "examples/sdk_v1_local_enqueue_and_mock_sync.rs"
required-features = ["runtime", "local-signer"]

[[example]]
name = "runtime_local"
path = "examples/runtime_local.rs"
required-features = ["cli-runtime"]

[dev-dependencies]
futures = { workspace = true }
nostr = { workspace = true }
radroots_core = { workspace = true, default-features = false, features = [
  "std",
] }
radroots_replica_db = { workspace = true, default-features = false, features = [
  "native",
] }
radroots_replica_db_schema = { workspace = true }
radroots_replica_sync = { workspace = true, features = ["std"] }
radroots_sql_core = { workspace = true, features = ["native"] }
radroots_nostr = { workspace = true, default-features = false, features = [
  "std",
  "events",
] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.26.2"
