[package]
name = "radroots_sdk_xtask"
description = "Workspace automation for Radroots SDK crates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[[bin]]
name = "radroots_sdk_xtask"
path = "src/main.rs"

[dependencies]
serde_json = "1"
