[package]
name = "radroots_sdk_xtask"
description = "Workspace automation for Radroots SDK crates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[[bin]]
name = "radroots_sdk_xtask"
path = "src/main.rs"

[dependencies]
radroots_core_bindings = { path = "../core_bindings" }
radroots_events_bindings = { path = "../events_bindings" }
radroots_events_indexed_bindings = { path = "../events_indexed_bindings" }
radroots_identity_bindings = { path = "../identity_bindings" }
radroots_types_bindings = { path = "../types_bindings" }
serde_json = "1"
