[package]
name = "radroots_sdk_xtask"
description = "Workspace automation for Radroots SDK crates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[[bin]]
name = "radroots_sdk_xtask"
path = "src/main.rs"

[dependencies]
dto_bindgen_core = { workspace = true }
radroots_sdk_binding_model = { path = "../../crates/binding_model" }
radroots_core_bindings = { path = "../../crates/core_bindings" }
radroots_events_bindings = { path = "../../crates/events_bindings" }
radroots_events_indexed_bindings = { path = "../../crates/events_indexed_bindings" }
radroots_identity_bindings = { path = "../../crates/identity_bindings" }
radroots_replica_db_schema_bindings = { path = "../../crates/replica_db_schema_bindings" }
radroots_types_bindings = { path = "../../crates/types_bindings" }
radroots_trade_bindings = { path = "../../crates/trade_bindings" }
serde_json = "1"
serde = { workspace = true, features = ["derive"] }
toml = "0.8"
