[package]
name = "radroots_sdk_xtask"
description = "Workspace automation for Radroots SDK crates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[[bin]]
name = "radroots_sdk_xtask"
path = "src/main.rs"

[dependencies]
dto_bindgen_backend_ts = { workspace = true }
dto_bindgen_core = { workspace = true }
radroots_core = { workspace = true, features = ["dto-bindgen"] }
radroots_event = { workspace = true, features = ["dto-bindgen"] }
radroots_event_bindings = { path = "../../crates/event_bindings" }
radroots_event_index = { workspace = true, features = ["dto-bindgen"] }
radroots_identity_bindings = { path = "../../crates/identity_bindings" }
radroots_replica_schema_bindings = { path = "../../crates/replica_schema_bindings" }
radroots_runtime_contract_v1 = { path = "../../crates/runtime_contract_v1" }
radroots_trade_bindings = { path = "../../crates/trade_bindings" }
flate2 = "1"
serde_json = "1"
serde = { workspace = true, features = ["derive"] }
tar = "0.4"
tempfile = { workspace = true }
toml = "0.8"
